testdata/fixtures/audit/positive/cookie_insecure_express_no_opts_ts.ts
import { Request, Response } from "express";

export function login(req: Request, res: Response): void {
  const token = issueSessionToken(req.user);
  res.cookie("session", token);
  res.json({ ok: true });
}
